<resources>
    <string name="app_name">STracker</string>
    <string name="title_timer">타이머</string>
    <string name="title_calendar">캘린더</string>
    <string name="title_reports">리포트</string>
    <string name="settings">설정</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">프로필</string>
    <string name="sync_header">Sync</string>
    <string name="email_title">이메일</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email_default">[rbsejin@gmail.com]</string>
    <string name="logout">로그아웃</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_authentication">이메일 주소 인증</string>
    <string name="authentication_code_input">인증번호 입력</string>
    <string name="ok">확인</string>
    <string name="new_password_register">새 비밀번호 등록</string>
    <string name="new_password_input">새 비밀번호 입력</string>
    <string name="email_confirm">인증번호 받기</string>
    <string name="login">로그인</string>
    <string name="password_find">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="auth_key_confirm">인증번호 확인</string>
    <string name="empty_email_message">이메일을 입력해주세요.</string>
    <string name="empty_password_massage">비밀번호를 입력해주세요.</string>
    <string name="server_connection_error_message">문제가 발생했습니다. 잠시 후 다시 시도해주세요. 계속해서 문제가 해결되지 않을 경우 고객센터로 문의해주세요.</string>
    <string name="email_password_mismatch_message">이메일, 비밀번호를 확인해주세요.</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="another_email">다른 이메일 인증</string>
</resources>