<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.stracker.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.stracker.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.stracker.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />
</navigation>