<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <Preference
            app:key="email"
            app:summary="@string/email_default"
            app:title="@string/email_title" />

        <!--        <EditTextPreference-->
        <!--            app:key="email"-->
        <!--            app:title="@string/email_title"-->
        <!--            app:summary="@string/email_default"-->
        <!--            app:useSimpleSummaryProvider="true"/>-->

        <!--        <ListPreference-->
        <!--            app:key="reply"-->
        <!--            app:title="@string/reply_title"-->
        <!--            app:entries="@array/reply_entries"-->
        <!--            app:entryValues="@array/reply_values"-->
        <!--            app:defaultValue="reply"-->
        <!--            app:useSimpleSummaryProvider="true"/>-->

    </PreferenceCategory>

    <!--    <PreferenceCategory-->
    <!--        app:title="@string/sync_header">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/sync_title"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="attachment"-->
    <!--            app:title="@string/attachment_title"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:dependency="sync"/>-->

    <!--    </PreferenceCategory>-->

    <PreferenceCategory>
        <Preference
            app:key="logout"
            app:title="@string/logout" />
    </PreferenceCategory>

</PreferenceScreen>