<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.SignUpActivity">

        <Button
            android:id="@+id/email_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:enabled="false"
            android:text="@string/email_confirm"
            app:layout_constraintBottom_toBottomOf="@+id/email_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_edit"
            app:layout_constraintTop_toTopOf="@+id/email_edit" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/authKeyEdit"
            app:layout_constraintEnd_toStartOf="@+id/email_confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/auth_key_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/auth_key_confirm"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/authKeyEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/authKeyEdit"
            app:layout_constraintTop_toTopOf="@+id/authKeyEdit" />

        <EditText
            android:id="@+id/authKeyEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:maxLength="6"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/password_edit"
            app:layout_constraintEnd_toStartOf="@+id/auth_key_confirm_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authKeyEdit" />

        <TextView
            android:id="@+id/password_alert_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="8dp"
            android:text="- 10자 이상 입력"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <EditText
            android:id="@+id/password_confirm_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_alert_text" />

        <TextView
            android:id="@+id/password_confirm_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_edit" />

        <CheckBox
            android:id="@+id/terms_of_service_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="이용약관 동의"
            app:layout_constraintEnd_toStartOf="@+id/terms_of_service_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_alert" />

        <CheckBox
            android:id="@+id/privacy_policy_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="개인정보 처리방침 동의"
            app:layout_constraintEnd_toStartOf="@+id/privacy_policy_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_of_service_check" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_check" />

        <ImageButton
            android:id="@+id/terms_of_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/terms_of_service_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/terms_of_service_check"
            app:layout_constraintTop_toTopOf="@+id/terms_of_service_check"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        <ImageButton
            android:id="@+id/privacy_policy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/privacy_policy_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/privacy_policy_check"
            app:layout_constraintTop_toTopOf="@+id/privacy_policy_check"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>